fix overflow on projects, alt tag, and other small things

--- a/src/Components/UI/Project/Project.css
+++ b/src/Components/UI/Project/Project.css
@@ -38,6 +38,8 @@
 	width: max-content;
 	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .card-title {
@@ -57,8 +59,6 @@
 		top: 0;
 		left: 0;
 		padding: 0px;
-		padding-top: 10px;
-		padding-bottom: 10px;
 	}
 
 	.project-flag-div {
